Fix spacing

--- a/src/components/hero.scss
+++ b/src/components/hero.scss
@@ -1,12 +1,7 @@
 .hero {
   @include mobile-flex;
-  padding-top: $spacing-xlarge;
-  padding-bottom: $spacing-large;
-
-  @media screen and (min-width: $screen-tablet-portrait) {
-    padding-top: calc($spacing-xlarge * 2);
-    padding-bottom: calc($spacing-xlarge * 2);
-  }
+  padding-top: $spacing-large;
+  padding-bottom: $spacing-xlarge;
   
   &__image {
     width: 250px;
